--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -190,6 +190,14 @@
       cursor: not-allowed;
     }
   }
+
+  &--team {
+    border-radius: 5px;
+    background: var.$sea-green;
+    width: 202px;
+    min-height: 53px;
+    padding: 16px 16px 15px 16px;
+  }
 }
 
 .partners {
@@ -360,6 +368,20 @@
   }
 }
 
+.close-button {
+  @extend %flex-cen;
+  width: 27px;
+  height: 27px;
+  border-radius: 50%;
+  background: var.$ashes;
+
+  &__icon {
+    width: 50%;
+    height: 50%;
+    fill: var.$dark-white;
+  }
+}
+
 .popup-msg {
   @extend %p-cen;
   display: block;
@@ -372,7 +394,7 @@
   visibility: hidden;
   opacity: 0;
   transform: translate(-50%, -50%) scale(0.4);
-  box-shadow: 0 4px 20px var.$black-shadow;
+  box-shadow: 0 4px 15px var.$black-shadow;
 
   &.active {
     transition: all 0.25s;
@@ -385,6 +407,12 @@
     @include mix.flex-col(23px);
     width: 100%;
     padding: 27px 41px 20px 41px;
+  }
+
+  &__close-button {
+    position: absolute;
+    top: -27px;
+    right: -27px;
   }
 
   &__head {
@@ -418,12 +446,56 @@
   &__info {
     color: var.$white;
     letter-spacing: 0;
+    text-align: center;
   }
 
   &__controls {
     @include mix.flex(wrap, 20px 35px);
     justify-content: center;
   }
+}
+
+.popup-msg--team {
+  width: 600px;
+
+  .popup-msg__head {
+    gap: 25px;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  .popup-msg__avatar {
+    width: 84px;
+    height: 84px;
+    border-radius: 50%;
+    object-fit: cover;
+    filter: saturate(1.3);
+  }
+
+  .popup-msg__intro {
+    gap: 13px;
+    max-width: none;
+  }
+
+  .popup-msg__footer {
+    @include mix.flex(nowrap, 20px);
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .popup-msg__controls {
+    gap: 20px;
+    flex-wrap: nowrap;
+  }
+
+  .popup-msg__socials {
+
+    .socials__link {
+      width: 40px;
+      height: 40px;
+    }
+  }
+
 }
 
 .data-field {
@@ -445,14 +517,19 @@
 
     &--textarea {
       resize: none;
-      overflow: hidden;
+      overflow: auto;
       height: 23px;
+
+      &::-webkit-scrollbar {
+        display: none;
+      }
     }
   }
 
   &__warning {
     opacity: 0;
     overflow: hidden;
+    text-overflow: ellipsis;
     height: 0px;
     transition: all 0.2s;
     color: var.$red;
@@ -553,21 +630,10 @@
     transform: scale(1);
   }
 
-  &__close {
-    @extend %flex-cen;
+  &__close-button {
     position: absolute;
     top: 0;
     left: -32px;
-    width: 27px;
-    height: 27px;
-    border-radius: 50%;
-    background: var.$ashes;
-  }
-
-  &__close-icon {
-    width: 50%;
-    height: 50%;
-    fill: var.$dark-white;
   }
 
   &__emoji {
@@ -1093,7 +1159,7 @@
   position: fixed;
   bottom: 40px;
   right: 60px;
-  z-index: 8;
+  z-index: 7;
   transition: all 0.2s;
 
   &.hide {
@@ -1334,17 +1400,7 @@
   background: var.$light-peri;
   border-radius: 9px;
   padding: 47px 9px 8px 9px;
-  
-  &::after {
-    content: '';
-    @extend %px-cen;
-    position: absolute;
-    bottom: 10px;
-    width: 80%;
-    height: 10px;
-    z-index: -1;
-    box-shadow: 0 15px 30px var.$silver;
-  }
+  box-shadow: 0 40px 25px -30px var.$card-shadow;
 
   &__logotype {
     @extend %flex-cen;
@@ -1352,6 +1408,7 @@
     height: 209px;
     border-radius: 50%;
     background: var.$white;
+    overflow: hidden;
   }
 
   &__img {
@@ -1432,12 +1489,13 @@
   }
 
   .swiper-slide {
-    transition: all 0.35s;
     padding: 0 0 37px 0;
-    opacity: 0;
 
     .tool-slide {
-      transition: all 0.3s;
+      will-change: transform, opacity;
+      transition: all 0.4s;
+      transform: scale(0.6);
+      opacity: 0;
 
       &__img {
         will-change: transform;
@@ -1447,7 +1505,11 @@
   }
 
   .swiper-slide-visible {
-    opacity: 1;
+
+    .tool-slide {
+      opacity: 1;
+      transform: scale(1);
+    }
   }
 
   .swiper-slide-active {
@@ -1468,7 +1530,7 @@
 
 .strategy {
   @include mix.flex-col(63px);
-  padding: 59px 0 44px 0;
+  padding: 59px 0px;
   position: relative;
 
   &__block-intro {
@@ -1549,6 +1611,191 @@
     transform: scale(0.1) rotate(240deg);
     opacity: 0;
     visibility: hidden;
+  }
+}
+
+// Team
+
+.team {
+  @include mix.flex-col(160px);
+  padding: 80px 0 60px 0;
+  position: relative;
+
+  &__block-intro {
+    max-width: 362px;
+
+    .block-intro__title {
+      color: var.$gray-blue;
+    }
+  }
+}
+
+.multi-decor {
+  @include mix.abs(50px, auto);
+  right: 0px;
+  z-index: -1;
+  width: 492px;
+  height: 548px;
+
+  &__img {
+    position: absolute;
+    filter: saturate(1.2);
+  }
+
+  &__img--colors {
+    width: 45.49%;
+    height: 28.3%;
+    top: 6.3%;
+    left: 0%;
+    filter: drop-shadow(7px 7px 7px var.$gray-fig) saturate(1.2);
+  }
+
+  &__img--bucket {
+    width: 26.8%;
+    height: 22.8%;
+    top: 0%;
+    left: 11%;
+    filter: drop-shadow(30px 30px 15px var.$gray-fig) saturate(1.2);
+  }
+
+  &__img--cube {
+    width: 32%;
+    height: 25%;
+    top: 46.2%;
+    left: 10.1%;
+    filter: drop-shadow(5px 5px 7px var.$gray-fig) saturate(1.2);
+  }
+
+  &__img--tools {
+    width: 8.5%;
+    height: 34.45%;
+    top: 53.5%;
+    left: 80.2%;
+    filter: drop-shadow(5px 5px 5px var.$gray-fig) saturate(1.2);
+  }
+
+  &__img--msg {
+    width: 42.65%;
+    height: 18.19%;
+    top: 29.5%;
+    left: 57.2%;
+    filter: drop-shadow(5px 5px 7px var.$gray-fig) saturate(1.2);
+  }
+
+  &__img--play {
+    width: 28.8%;
+    height: 25.8%;
+    top: 7.3%;
+    left: 60%;
+  }
+
+  &__img--phone {
+    width: 44.4%;
+    height: 80.89%;
+    top: 18.9%;
+    left: 31.1%;
+  }
+
+  &__img--sector {
+    width: 20.8%;
+    height: 18.7%;
+    top: 37.1%;
+    left: 43.8%;
+  }
+
+  &__img--mid {
+    width: 35.79%;
+    height: 27.8%;
+    top: 68.3%;
+    left: 35.63%;
+    filter: drop-shadow(5px 5px 4px var.$gray-fig) saturate(1.2);
+  }
+
+  &__img--tab {
+    width: 37%;
+    height: 41.59%;
+    top: 26%;
+    left: 35.4%;
+    filter: drop-shadow(3px 3px 3px var.$gray-fig) saturate(1.2);
+  }
+}
+
+.teammate {
+  @include mix.flex-col();
+  background: var.$light-peri;
+  border-radius: 10px;
+  width: 330px;
+  position: relative;
+  box-shadow: 0 40px 35px -30px var.$card-shadow;
+
+  &__avatar-wrapper {
+    border-radius: 10px 10px 0 0;
+    overflow: hidden;
+    width: 100%;
+    height: 327px;
+  }
+
+  &__avatar {
+    @extend %wh-100;
+    display: block;
+    filter: saturate(1.3);
+
+    &.loaded {
+      object-fit: cover;
+    }
+  }
+
+  &__info {
+    @include mix.flex-col(30px);
+    justify-content: space-between;
+    width: 100%;
+    min-height: 263px;
+    padding: 35px 30px;
+  }
+
+  &__name {
+    color: var.$gray-blue;
+    width: fit-content;
+  }
+
+  &__role {
+    color: var.$gray;
+  }
+
+  &__button {
+    align-self: center;
+  }
+}
+
+.teammates {
+  @include mix.flex-col(0px);
+  align-items: center;
+
+  &__body {
+    @include mix.flex(wrap, 55px);
+    justify-content: center;
+    overflow: hidden;
+    padding: 0 0 45px 0;
+  }
+
+  &__teammate {
+    will-change: transform, opacity;
+    transition: all 0.3s;
+    opacity: 1;
+    visibility: visible;
+    transform: scale(1);
+
+    &.hidden {
+      opacity: 0;
+      visibility: hidden;
+      transform: scale(0.6);
+    }
+  }
+
+  &__button {
+    width: 228px;
+    min-height: 60px;
+    padding: 15px 20px;
   }
 }
 
@@ -1934,11 +2181,7 @@
     padding: 26px 5px 5px 5px;
     border-radius: 5px;
     gap: 11px;
-
-    &::after {
-      width: 75%;
-      box-shadow: 0 10px 20px var.$silver;
-    }
+    box-shadow: 0 28px 25px -25px var.$card-shadow;
 
     &__logotype {
       width: 114px;
@@ -2367,10 +2610,7 @@
   .tool-slide {
     gap: 13px;
     padding: 30px 5px 5px 5px;
-
-    &::after {
-      width: 85%;
-    }
+    box-shadow: 0 32px 20px -25px var.$card-shadow;
 
     &__logotype {
       width: 133px;
@@ -2498,6 +2738,14 @@
 
     &__link {
       width: 80%;
+    }
+  }
+
+  .popup-msg {
+
+    &__close-button {
+      right: 0;
+      top: -35px;
     }
   }
 
@@ -2713,9 +2961,13 @@
     bottom: 10px;
     right: 10px;
 
-    &__close {
+    &__close-button {
       top: -35px;
       left: 0;
+    }
+
+    &__emoji {
+      height: 325px;
     }
   }
 
@@ -2883,8 +3135,6 @@
     &__info {
       border-radius: 8px;
     }
-
-
   }
 
   .strategy {
