--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -131,3 +131,18 @@
   font-weight: 700;
   line-height: 100%;
 }
+
+.name-text {
+  font-family: 'DM Sans';
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 42px;
+  letter-spacing: -0.045em;
+}
+
+.role-text {
+  font-family: 'Poppins';
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+}
