--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -9,6 +9,7 @@ $white: rgb(255, 255, 255);
 $dark-white: rgb(180, 180, 180);
 $sea-green: rgb(39, 182, 116);
 $blue: rgb(73, 71, 229);
+$gray-fig:rgb(167, 167, 167);
 $yellow: rgb(255, 210, 71);
 $silver: rgba(111, 111, 111, 0.53);
 $light-silver: rgba(255, 255, 255, 0.5);
@@ -18,3 +19,4 @@ $dark-silver: rgb(79, 79, 79);
 $black-shadow: rgba(0, 0, 0, 0.4);
 $ashes: rgb(66, 68, 78);
 $black: rgb(21, 22, 23);
+$card-shadow:rgb(209, 209, 209);
