--- a/src/scss/mobile-states.scss
+++ b/src/scss/mobile-states.scss
@@ -110,3 +110,16 @@
   }
 
 }
+
+// Team 
+
+.button--team {
+
+  &:not([disabled]) {
+
+    &:active {
+      background: var.$lime;
+    }
+
+  }
+}
