Basic version of advantages-block done

--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -146,3 +146,11 @@
   font-weight: 400;
   line-height: 19px;
 }
+
+.adv-text {
+  font-family: 'DM Sans';
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 52px;
+  letter-spacing: -0.045em;
+}
