--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,10 +7,96 @@
 
 // Header
 
+.complex-decor {
+  @include mix.abs(0px, 50%);
+  @extend %px-cen;
+  z-index: -1;
+  width: 100vw;
+  height: 100%;
+  overflow: hidden;
+
+  &__element {
+    position: absolute;
+  }
+
+  &__img {
+    position: absolute;
+    display: block;
+    filter: saturate(1.2);
+  }
+}
+
 .header {
   @include mix.flex-col(160px);
   padding: 66px 0 54px 0;
   position: relative;
+
+  &__complex-decor {
+
+    .complex-decor__element {
+      top: 28.46%;
+      right: 11.65%;
+      width: 530px;
+      height: 435px;
+    }
+
+    .complex-decor__img--monitor {
+      top: 11%;
+      left: 12%;
+      width: 79%;
+      height: 77.5%;
+      filter: drop-shadow(3px 3px 3px var.$silver);
+    }
+
+    .complex-decor__img--viewport {
+      top: 13.7%;
+      left: 14.2%;
+      width: 74.7%;
+      height: 58.5%;
+      filter: drop-shadow(3px 3px 5px var.$gray);
+    }
+
+    .complex-decor__img--tasks {
+      top: 29.5%;
+      left: 16.6%;
+      width: 355px;
+      height: 172px;
+      width: 67%;
+      height: 39.5%;
+    }
+
+    .complex-decor__img--files {
+      top: 0%;
+      right: 0%;
+      width: 30.7%;
+      height: 40.8%;
+      filter: drop-shadow(-20px 30px 8px var.$silver);
+    }
+
+    .complex-decor__img--msg {
+      top: 50.5%;
+      left: 0%;
+      width: 26%;
+      height: 15.3%;
+      filter: drop-shadow(15px 8px 5px var.$silver);
+    }
+
+    .complex-decor__img--keyboard {
+      width: 44%;
+      height: 6%;
+      bottom: 0%;
+      left: 29%;
+      filter: drop-shadow(3px 3px 1px var.$silver);
+    }
+
+    .complex-decor__img--mouse {
+      width: 10.5%;
+      height: 6.3%;
+      bottom: 0;
+      right: 13.5%;
+      filter: drop-shadow(3px 3px 1px var.$silver);
+    }
+  }
 }
 
 .head-nav {
@@ -295,76 +381,13 @@
     height: 901px;
     background: var.$blue;
   }
-}
 
-.comp {
-  position: absolute;
-  top: 28.5%;
-  right: 0.1%;
-  width: 530px;
-  height: 435px;
-
-  &__img {
-    position: absolute;
-    display: block;
-    filter: saturate(1.2);
-  }
-
-  &__img--monitor {
-    top: 11%;
-    left: 12%;
-    width: 79%;
-    height: 77.5%;
-    filter: drop-shadow(3px 3px 3px var.$silver);
-  }
-
-  &__img--viewport {
-    top: 13.7%;
-    left: 14.2%;
-    width: 74.7%;
-    height: 58.5%;
-    filter: drop-shadow(3px 3px 5px var.$gray);
-  }
-
-  &__img--tasks {
-    top: 29.5%;
-    left: 16.6%;
-    width: 355px;
-    height: 172px;
-    width: 67%;
-    height: 39.5%;
-  }
-
-  &__img--files {
-    top: 0%;
-    right: 0%;
-    width: 30.7%;
-    height: 40.8%;
-    filter: drop-shadow(-20px 30px 8px var.$silver);
-  }
-
-  &__img--msg {
-    top: 50.5%;
-    left: 0%;
-    width: 26%;
-    height: 15.3%;
-    filter: drop-shadow(15px 8px 5px var.$silver);
-  }
-
-  &__img--keyboard {
-    width: 44%;
-    height: 6%;
-    bottom: 0%;
-    left: 29%;
-    filter: drop-shadow(3px 3px 1px var.$silver);
-  }
-
-  &__img--mouse {
-    width: 10.5%;
-    height: 6.3%;
-    bottom: 0;
-    right: 13.5%;
-    filter: drop-shadow(3px 3px 1px var.$silver);
+  &__circle--once {
+    top: 4.3%;
+    left: 76%;
+    width: 450px;
+    height: 450px;
+    background: var.$yellow;
   }
 }
 
@@ -1002,19 +1025,19 @@
 }
 
 .mobile-menu {
+  @include mix.flex-col(60px);
   will-change: transform, opacity;
   display: none;
   position: relative;
   background: var.$white;
-  padding: 20px 0px;
+  padding: 25px 70px;
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   z-index: 10;
-  overflow-x: hidden;
-  overflow-y: auto;
+  overflow: hidden;
   visibility: hidden;
   opacity: 0;
   transition: all 0.2s;
@@ -1063,9 +1086,7 @@
 
   &__inner {
     @include mix.flex-col(60px);
-    align-self: center;
-    width: 628px;
-    margin: 0 auto;
+    align-items: center;
   }
 
   &__head {
@@ -1091,6 +1112,12 @@
   &__body {
     @include mix.flex-col(30px);
     align-items: center;
+    overflow: auto;
+    height: 100%;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   &__nav-links {
@@ -1238,6 +1265,7 @@
 
 .skills-slider {
   @include mix.flex(nowrap, 75px);
+  position: relative;
 
   &__panel {
     @include mix.flex-col(30px);
@@ -1245,20 +1273,13 @@
     align-self: stretch;
   }
 
-  &__line-wrapper {
-    padding: 60px 0 0 0;
-    margin: -60px 0 0 0;
-    position: relative;
-
-    &::before {
-      content: '';
-      @include mix.abs();
-      display: block;
-      width: 100vw;
-      height: 2px;
-      background: var.$sea-green;
-      border-radius: 4px;
-    }
+  &__line {
+    left: 0;
+    top: -60px;
+    position: absolute;
+    height: 2px;
+    background: var.$sea-green;
+    border-radius: 4px 0 0 4px;
   }
 
   &__main {
@@ -1389,6 +1410,10 @@
 
   &__slider {
     width: 645px;
+  }
+
+  &__bg-decore {
+    display: none;
   }
 }
 
@@ -1618,7 +1643,8 @@
 
 .team {
   @include mix.flex-col(160px);
-  padding: 80px 0 60px 0;
+  // padding: 80px 0 60px 0;
+  padding: 80px 0 80px 0;
   position: relative;
 
   &__block-intro {
@@ -1628,95 +1654,93 @@
       color: var.$gray-blue;
     }
   }
-}
 
-.multi-decor {
-  @include mix.abs(50px, auto);
-  right: 0px;
-  z-index: -1;
-  width: 492px;
-  height: 548px;
+  &__complex-decor {
 
-  &__img {
-    position: absolute;
-    filter: saturate(1.2);
-  }
+    .complex-decor__element {
+      top: 50px;
+      right: 11.55%;
+      width: 492px;
+      height: 548px;
+    }
 
-  &__img--colors {
-    width: 45.49%;
-    height: 28.3%;
-    top: 6.3%;
-    left: 0%;
-    filter: drop-shadow(7px 7px 7px var.$gray-fig) saturate(1.2);
-  }
+    .complex-decor__img--colors {
+      width: 45.49%;
+      height: 28.3%;
+      top: 6.3%;
+      left: 0%;
+      filter: drop-shadow(7px 7px 7px var.$gray-fig) saturate(1.2);
+    }
 
-  &__img--bucket {
-    width: 26.8%;
-    height: 22.8%;
-    top: 0%;
-    left: 11%;
-    filter: drop-shadow(30px 30px 15px var.$gray-fig) saturate(1.2);
-  }
+    .complex-decor__img--bucket {
+      width: 26.8%;
+      height: 22.8%;
+      top: 0%;
+      left: 11%;
+      filter: drop-shadow(30px 30px 15px var.$gray-fig) saturate(1.2);
+    }
 
-  &__img--cube {
-    width: 32%;
-    height: 25%;
-    top: 46.2%;
-    left: 10.1%;
-    filter: drop-shadow(5px 5px 7px var.$gray-fig) saturate(1.2);
-  }
+    .complex-decor__img--cube {
+      width: 32%;
+      height: 25%;
+      top: 46.2%;
+      left: 10.1%;
+      filter: drop-shadow(5px 5px 7px var.$gray-fig) saturate(1.2);
+    }
 
-  &__img--tools {
-    width: 8.5%;
-    height: 34.45%;
-    top: 53.5%;
-    left: 80.2%;
-    filter: drop-shadow(5px 5px 5px var.$gray-fig) saturate(1.2);
-  }
+    .complex-decor__img--tools {
+      width: 8.5%;
+      height: 34.45%;
+      top: 53.5%;
+      left: 80.2%;
+      filter: drop-shadow(5px 5px 5px var.$gray-fig) saturate(1.2);
+    }
 
-  &__img--msg {
-    width: 42.65%;
-    height: 18.19%;
-    top: 29.5%;
-    left: 57.2%;
-    filter: drop-shadow(5px 5px 7px var.$gray-fig) saturate(1.2);
-  }
+    .complex-decor__img--msg {
+      width: 42.65%;
+      height: 18.19%;
+      top: 29.5%;
+      left: 57.2%;
+      filter: drop-shadow(5px 5px 7px var.$gray-fig) saturate(1.2);
+    }
 
-  &__img--play {
-    width: 28.8%;
-    height: 25.8%;
-    top: 7.3%;
-    left: 60%;
-  }
+    .complex-decor__img--play {
+      width: 28.8%;
+      height: 25.8%;
+      top: 7.3%;
+      left: 60%;
+    }
 
-  &__img--phone {
-    width: 44.4%;
-    height: 80.89%;
-    top: 18.9%;
-    left: 31.1%;
-  }
+    .complex-decor__img--phone {
+      width: 44.4%;
+      height: 80.89%;
+      top: 18.9%;
+      left: 31.1%;
+    }
 
-  &__img--sector {
-    width: 20.8%;
-    height: 18.7%;
-    top: 37.1%;
-    left: 43.8%;
-  }
+    .complex-decor__img--sector {
+      width: 20.8%;
+      height: 18.7%;
+      top: 37.1%;
+      left: 43.8%;
+    }
 
-  &__img--mid {
-    width: 35.79%;
-    height: 27.8%;
-    top: 68.3%;
-    left: 35.63%;
-    filter: drop-shadow(5px 5px 4px var.$gray-fig) saturate(1.2);
-  }
+    .complex-decor__img--mid {
+      width: 35.79%;
+      height: 27.8%;
+      top: 68.3%;
+      left: 35.63%;
+      filter: drop-shadow(5px 5px 4px var.$gray-fig) saturate(1.2);
+    }
 
-  &__img--tab {
-    width: 37%;
-    height: 41.59%;
-    top: 26%;
-    left: 35.4%;
-    filter: drop-shadow(3px 3px 3px var.$gray-fig) saturate(1.2);
+    .complex-decor__img--tab {
+      width: 37%;
+      height: 41.59%;
+      top: 26%;
+      left: 35.4%;
+      filter: drop-shadow(3px 3px 3px var.$gray-fig) saturate(1.2);
+    }
+
   }
 }
 
@@ -1799,11 +1823,105 @@
   }
 }
 
+// Advantages
+
+.advantages {
+  @include mix.flex-col(85px);
+  padding: 80px 0;
+  position: relative;
+
+  &__block-intro {
+    max-width: 428px;
+
+    .block-intro__title {
+      color: var.$white;
+    }
+  }
+
+  &__content {
+    @include mix.flex-col(42px);
+    align-items: center;
+  }
+
+  &__cards {
+    @include mix.flex(wrap, 43px);
+    justify-content: center;
+  }
+
+  &__button {
+    min-height: 60px;
+    padding: 15px 20px;
+  }
+
+  &__bg-decore {
+
+    .bg-decore__circle--adv {
+      width: 49px;
+      height: 49px;
+      background: var.$blue;
+      top: 126px;
+      left: 57.65%;
+    }
+
+    .bg-decore__circle--image {
+      background: none;
+      width: 359px;
+      height: 710px;
+      border-radius: 0;
+      top: 64px;
+      left: 67.7%;
+    }
+  }
+}
+
+.advantage {
+  @include mix.flex-col(60px);
+  position: relative;
+  padding: 50px 42px 42px 42px;
+  width: 338px;
+  min-height: 442px;
+  border-radius: 10px;
+  background: var.$white;
+  box-shadow: 0px 23px 30px -30px var.$white;
+
+  &::before {
+    content: '';
+    @include mix.abs();
+    display: block;
+    width: 100%;
+    height: 13px;
+    background: var.$yellow;
+    border-radius: 10px 10px 0 0;
+  }
+
+  &__title {
+    color: var.$gray-blue;
+    line-height: 40px;
+    word-break: break-word;
+  }
+
+  &__text {
+    font-size: 18px;
+    line-height: 25px;
+    color: var.$gray;
+  }
+}
+
 
 
 
 // Media queries
 @media (max-width: 1600px) {
+
+  .header {
+
+    &__complex-decor {
+
+      .complex-decor__element {
+        right: 7.8%;
+      }
+    }
+  }
 
   .bg-decore {
 
@@ -1848,6 +1966,17 @@
     width: 1150px;
   }
 
+  .header {
+
+    &__complex-decor {
+
+      .complex-decor__element {
+        width: 430px;
+        height: 335px;
+      }
+    }
+  }
+
   .head-nav {
     max-width: 1050px;
   }
@@ -1858,11 +1987,6 @@
       font-size: 120px;
       line-height: 110px;
     }
-  }
-
-  .comp {
-    width: 430px;
-    height: 335px;
   }
 
   .about {
@@ -1896,6 +2020,16 @@
   .header {
     padding: 52px 0 83px 0;
     gap: 165px;
+
+    &__complex-decor {
+
+      .complex-decor__element {
+        top: 33.7%;
+        right: 9.85%;
+        width: 312px;
+        height: 256px;
+      }
+    }
   }
 
   .head-nav {
@@ -2006,12 +2140,6 @@
     }
   }
 
-  .comp {
-    top: 33.6%;
-    width: 312px;
-    height: 256px;
-  }
-
   .chat-btn {
     width: 60px;
     height: 60px;
@@ -2119,9 +2247,8 @@
   .skills-slider {
     gap: 55px;
 
-    &__line-wrapper {
-      padding: 46px 0 0 0;
-      margin: -46px 0 0 0;
+    &__line {
+      top: -46px;
     }
 
     &__main {
@@ -2244,11 +2371,15 @@
   .team {
     gap: 80px;
     padding: 47px 0px;
-  }
 
-  .multi-decor {
-    width: 350px;
-    height: 390px;
+    &__complex-decor {
+
+      .complex-decor__element {
+        width: 350px;
+        height: 390px;
+        right: 9.7%;
+      }
+    }
   }
 
   .teammates {
@@ -2300,6 +2431,14 @@
 
   .header {
     gap: 140px;
+
+    &__complex-decor {
+
+      .complex-decor__element {
+        top: 55%;
+        right: 13.5%;
+      }
+    }
   }
 
   .head-nav {
@@ -2339,10 +2478,6 @@
     &--aside {
       top: 236px;
     }
-  }
-
-  .comp {
-    top: 55%;
   }
 
   .bg-decore {
@@ -2388,21 +2523,19 @@
     position: relative;
     gap: 50px;
 
-    &::before {
-      content: '';
-      display: block;
-      width: 430px;
-      height: 430px;
-      border-radius: 50%;
-      background: var.$yellow;
-      position: absolute;
-      top: 42px;
-      right: -50%;
-      z-index: -1;
-    }
-
     &__slider {
       width: 100%;
+    }
+
+    &__bg-decore {
+      display: block;
+    }
+  }
+
+  .team {
+
+    &__block-intro {
+      max-width: 250px;
     }
   }
 
@@ -2428,6 +2561,15 @@
     &__head-intro {
       margin: 108px 0 0 0;
     }
+
+    &__complex-decor {
+
+      .complex-decor__element {
+        width: 310px;
+        height: 254px;
+        right: 9.3%;
+      }
+    }
   }
 
   .button {
@@ -2447,7 +2589,7 @@
   }
   
   .mobile-menu {
-    display: block;
+    display: flex;
   }
 
   .head-nav {
@@ -2544,6 +2686,13 @@
       width: 1024px;
       height: 1024px;
     }
+
+    &__circle--once {
+      left: 79%;
+      width: 430px;
+      height: 430px;
+      background: var.$yellow;
+    }
   }
 
   .popup-msg {
@@ -2623,6 +2772,7 @@
 
     &__main {
       width: 407px;
+      margin: 0;
     }
 
     &__title {
@@ -2759,6 +2909,14 @@
     &__block-intro {
       max-width: 200px;
     }
+
+    &__complex-decor {
+
+      .complex-decor__element {
+        right: 9.1%;
+      }
+
+    }
   }
 
   .teammates {
@@ -2803,6 +2961,17 @@
     width: 430px;
   }
 
+  .header {
+
+    &__complex-decor {
+
+      .complex-decor__element {
+        display: none;
+      }
+    }
+
+  }
+
   .mobile-nav {
 
     &__inner {
@@ -2811,10 +2980,6 @@
   }
 
   .mobile-menu {
-
-    &__inner {
-      width: 400px;
-    }
 
     &__circle {
 
@@ -2837,10 +3002,6 @@
       font-size: 19px;
 
     }
-  }
-
-  .comp {
-    display: none;
   }
 
   .partners {
@@ -2879,6 +3040,11 @@
     &__circle--big {
       left: 80%;
     }
+
+    &__circle--once {
+      width: 398px;
+      height: 398px;
+    }
   }
 
   .about {
@@ -2913,12 +3079,6 @@
   .tools {
     padding: 34px 0 32px 0;
     gap: 60px;
-
-    &::before {
-      width: 398px;
-      height: 398px;
-      right: -100%;
-    }
   }
 
   .team {
@@ -2950,12 +3110,15 @@
       }
     }
 
-  }
+    &__complex-decor {
 
-  .multi-decor {
-    width: 240px;
-    height: 270px;
-    right: -70px;
+      .complex-decor__element {
+        width: 240px;
+        height: 270px;
+        right: -70px;
+      }
+
+    }
   }
 
   .teammate {
@@ -2986,6 +3149,7 @@
   }
 
   .mobile-menu {
+    padding: 25px 30px;
 
     &__circle {
 
@@ -2999,14 +3163,6 @@
         width: 68px;
         height: 68px;
       }
-    }
-
-    &__inner {
-      width: 275px;
-    }
-
-    &__body {
-      gap: 50px;
     }
 
     &__nav-links {
@@ -3133,6 +3289,11 @@
       width: 404px;
       height: 404px;
     }
+
+    &__circle--once {
+      top: 34px;
+      left: 86%;
+    }
   }
 
   .popup-msg {
@@ -3141,6 +3302,14 @@
     &__head {
       gap: 10px;
       flex-direction: column;
+    }
+
+    &__socials {
+      
+      .socials__link {
+        width: 35px;
+        height: 35px;
+      }
     }
 
     &__subtitle {
@@ -3159,6 +3328,7 @@
     &__data-field:not(:last-of-type) {
       margin: 0 0 20px 0;
     }
+    
   }
 
   .popup-msg--team {
@@ -3274,11 +3444,6 @@
   .tools {
     padding: 34px 0 33px 0;
 
-    &::before {
-      top: 34px;
-      right: -144%;
-    }
-
     &__block-intro {
 
       .button--common {
@@ -3369,36 +3534,38 @@
     &__content {
       gap: 5px;
     }
-  }
 
-  .multi-decor {
-    top: 0px;
-    right: -203px;
-    width: 300px;
-    height: 344px;
+    &__complex-decor {
 
-    &__img {
-      filter: drop-shadow(2px 2px 2px var.$gray-fig) saturate(1.2);
+      .complex-decor__element {
+        top: 0px;
+        right: -153px;
+        width: 300px;
+        height: 344px;
+      }
+
+      .complex-decor__img {
+        filter: drop-shadow(2px 2px 2px var.$gray-fig) saturate(1.2);
+      }
+
+      .complex-decor__img--bucket, .complex-decor__img--colors, .complex-decor__img--cube {
+        display: none;
+      }
+
+      .complex-decor__img--msg {
+        left: 1%;
+        transform: rotateY(180deg);
+        filter: drop-shadow(-2px 2px 2px var.$gray-fig) saturate(1.2);
+      }
+
+      .complex-decor__img--play {
+        left: 14%;
+      }
+
+      .complex-decor__img--tools {
+        left: 16%;
+      }
     }
-
-    &__img--bucket, &__img--colors, &__img--cube {
-      display: none;
-    }
-
-    &__img--msg {
-      left: 1%;
-      transform: rotateY(180deg);
-      filter: drop-shadow(-2px 2px 2px var.$gray-fig) saturate(1.2);
-    }
-
-    &__img--play {
-      left: 14%;
-    }
-
-    &__img--tools {
-      left: 16%;
-    }
-
   }
 
   .teammate {
