--- a/src/scss/desktop-states.scss
+++ b/src/scss/desktop-states.scss
@@ -352,3 +352,78 @@
 
   }
 }
+
+// Works
+
+.work-slide {
+  will-change: transform;
+  transition: all 0.25s;
+
+  &__label {
+    will-change: transform;
+  }
+
+  &__image {
+    will-change: transform;
+    transition: all 0.25s;
+  }
+
+  &__title {
+    position: relative;
+
+    &::before {
+      content: '';
+      display: block;
+      width: 0%;
+      height: 2px;
+      background: var.$blue;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: all 0.2s;
+    }
+  }
+
+  &:hover {
+    transform: translateY(3px);
+    box-shadow: none;
+
+    .work-slide__image {
+      transform: scale(1.06);
+    }
+
+    .work-slide__label {
+      animation: label-zoom 0.5s;
+    }
+
+    .work-slide__title {
+
+      &::before {
+        width: 100%;
+      }
+    }
+  }
+
+  @keyframes label-zoom {
+    0%{transform: scale(1)}
+    50%{transform: scale(1.2)}
+    100%{transform: scale(1)}
+  }
+}
+
+.work-slide__link {
+  transition: all 0.2s;
+  text-decoration: underline transparent;
+
+  &:hover, &:focus {
+    color: var.$yellow;
+    letter-spacing: 0.3px;
+    text-decoration: underline var.$yellow;
+  }
+
+  &:active {
+    transition: all 0.08s;
+    transform: translateY(2px);
+  }
+}
