--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1256,7 +1256,7 @@
     height: 100%;
     background: url(../images/backgrounds/noise.png) 0 0 / cover no-repeat,
                 url(../images/backgrounds/about-bg2.png) 0 0 / cover no-repeat,
-                url(../images/backgrounds/about-bg.jpg) 0 0 / cover no-repeat,
+                url(../images/backgrounds/about-bg.png) 0 0 / cover no-repeat,
                 var.$black;
     z-index: -1;
   }
@@ -1434,6 +1434,7 @@
     border-radius: 50%;
     background: var.$white;
     overflow: hidden;
+    flex-shrink: 0;
   }
 
   &__img {
@@ -1455,11 +1456,11 @@
 
   &__info {
     @include mix.flex-col(20px);
+    @extend %wh-100;
     justify-content: center;
     padding: 30px;
     background: var.$white;
     border-radius: 9px;
-    width: 100%;
     min-height: 236px;
   }
 
@@ -1515,6 +1516,7 @@
 
   .swiper-slide {
     padding: 0 0 37px 0;
+    height: 100%;
 
     .tool-slide {
       will-change: transform, opacity;
@@ -1741,6 +1743,13 @@
     }
 
   }
+
+  &__slider {
+
+    .swiper-slide {
+      height: 100%;
+    }
+  }
 }
 
 .teammate {
@@ -1879,6 +1888,7 @@
 
     .swiper-slide {
       padding: 0 0 30px 0;
+      height: 100%;
     }
   }
 
@@ -1920,6 +1930,142 @@
     color: var.$gray;
   }
 }
+
+// Works
+
+.works {
+  @include mix.flex(nowrap, 41px);
+  padding: 70px 0;
+  position: relative;
+
+  &__block-intro {
+    max-width: 302px;
+
+    .block-intro__title {
+      color: var.$gray-blue;
+    }
+  }
+
+  &__slider {
+    width: 986px;
+
+    .swiper-slide {
+      padding: 40px 40px 37px 0;
+      height: 100%;
+    }
+    
+    .slider__pagination {
+      margin: 0;
+    }
+
+    .slider__slider-controls {
+      margin: 0 29px 0 0;
+    }
+  }
+
+  &__bg-decore {
+    background: var.$light-gray;
+
+    .bg-decore__circle--works {
+      top: 110px;
+      left: -5.6%;
+      width: 191px;
+      height: 191px;
+    }
+
+    .bg-decore__circle--react {
+      top: 0;
+      right: -22%;
+      width: 728px;
+      height: 728px;
+      background: none;
+    }
+  }
+
+  &__button {
+    width: 100%;
+  }
+}
+
+.work-slide {
+  @include mix.flex-col(0px);
+  @extend %wh-100;
+  background: var.$white;
+  border-radius: 10px;
+  box-shadow: 0 25px 20px -30px var.$gray;
+  position: relative;
+
+  &__label {
+    display: block;
+    width: 73px;
+    height: 70px;
+    position: absolute;
+    top: -33px;
+    right: -33px;
+    filter: saturate(1.1);
+    z-index: 1;
+  }
+
+  &__img-wrapper {
+    width: 100%;
+    height: 149px;
+    overflow: hidden;
+    border-radius: 10px 10px 0 0;
+    flex-shrink: 0;
+  }
+
+  &__image {
+    @extend %wh-100;
+    display: block;
+    filter: saturate(1.3);
+
+    &.loaded {
+      object-fit: cover;
+    }
+  }
+
+  &__body {
+    @include mix.flex-col(23px);
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
+    padding: 26px;
+  }
+
+  &__info {
+    @include mix.flex-col(14px);
+    width: 100%;
+  }
+
+  &__title {
+    width: fit-content;
+    color: var.$gray-blue;
+  }
+
+  &__text {
+    color: var.$gray;
+  }
+
+  &__controls {
+    @include mix.flex-col(23px);
+    width: 100%;
+    align-items: center;
+  }
+
+  &__link {
+    letter-spacing: -0.04em;
+    color: var.$sea-green;
+    align-self: flex-start;
+  }
+
+  &__button {
+    width: 190px;
+  }
+}
+
+
+
+
 
 
 
@@ -1970,6 +2116,20 @@
       top: 30px;
     }
 
+  }
+
+  .works {
+
+    &__bg-decore {
+
+      .bg-decore__circle--works {
+        left: -7.5%;
+      }
+
+      .bg-decore__circle--react {
+        right: -23%;
+      }
+    }
   }
 
 }
@@ -3266,6 +3426,15 @@
 
   .teammate {
     width: 100%;
+    height: 100%;
+
+    &__avatar-wrapper {
+      flex-shrink: 0;
+    }
+
+    &__info {
+      height: 100%;
+    }
   }
 
   .advantages {
@@ -3285,6 +3454,7 @@
 
   .advantage {
     width: 100%;
+    height: 100%;
     min-height: 280px;
   }
 
