--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -154,3 +154,10 @@
   line-height: 52px;
   letter-spacing: -0.045em;
 }
+
+.work-text {
+  font-family: 'Poppins';
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+}
