--- a/src/scss/modules/_variables.scss
+++ b/src/scss/modules/_variables.scss
@@ -20,3 +20,4 @@ $black-shadow: rgba(0, 0, 0, 0.4);
 $ashes: rgb(66, 68, 78);
 $black: rgb(21, 22, 23);
 $card-shadow:rgb(209, 209, 209);
+$light-gray: rgba(236, 242, 246);
