--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2058,6 +2058,160 @@
   }
 }
 
+// Reviews 
+
+.reviews {
+  @include mix.flex-col(45px);
+  padding: 80px 0 70px 0;
+  position: relative;
+
+  &__block-intro {
+    max-width: 575px;
+
+    .block-intro__title {
+      color: var.$gray-blue;
+
+      &::after {
+        content: '.';
+        color: var.$sea-green;
+      }
+    }
+  }
+
+  &__content {
+    @include mix.flex(nowrap, 180px);
+  }
+
+  &__main {
+    @include mix.flex-col(15px);
+    width: 51.8%;
+    position: relative;
+  }
+
+  &__view {
+    @include mix.flex-col(22px);
+    margin: 43px 0 0 0;
+    max-width: 355px;
+  }
+
+  &__sub {
+    color: var.$gray-blue;
+    font-weight: 500;
+
+    &::after {
+      content: ' Up Work';
+      color: var.$lime;
+    }
+  }
+
+  &__button {
+    width: 213px;
+    padding: 20px;
+    min-height: 70px;
+  }
+
+  &__bg-decore {
+
+    .bg-decore__circle {
+      background: none;
+      border-radius: 0;
+    }
+
+    .bg-decore__circle--upline {
+      top: 7px;
+      left: -6.56%;
+      width: 307px;
+      height: 970px;
+    }
+
+    .bg-decore__circle--upwork {
+      top: -60px;
+      right: -20%;
+      width: 1122px;
+      height: 1122px;
+      opacity: 0.5;
+    }
+  }
+
+  &__pagination {
+
+    .pagination__current {
+      color: var.$gray-blue;
+
+      &::after {
+        background: var.$gray-blue;
+      }
+    }
+  }
+
+  &__slider {
+    width: 100%;
+  }
+
+  &__slider-controls {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 1;
+  }
+}
+
+.stars {
+  @include mix.flex(nowrap, 12px);
+  align-items: center;
+
+  &__count {
+    letter-spacing: 0;
+    font-weight: 400;
+    color: var.$gray-blue;
+  }
+
+  &__rate {
+    @include mix.flex(nowrap, 5px);
+    align-items: center;
+  }
+
+  &__star {
+    width: 19px;
+    height: 19px;
+  }
+}
+
+.review {
+  @include mix.flex-col(21px);
+
+  &__info {
+    @include mix.flex-col(14px);
+  }
+
+  &__title {
+    color: var.$gray-blue;
+  }
+
+  &__text {
+    line-height: 23px;
+    letter-spacing: 0;
+    font-weight: 400;
+    color: var.$gray;
+  }
+
+  &__link {
+    margin: 10px 0 0 0;
+    font-size: 20px;
+    color: var.$gray-blue;
+
+    &::after {
+      content: ' Up work';
+      color: var.$lime;
+    }
+  }
+}
+
+.review-slide {
+  @include mix.flex-col(39px);
+  @extend %wh-100;
+}
+
 
 
 
@@ -2127,6 +2281,20 @@
     }
   }
 
+  .reviews {
+
+    &__bg-decore {
+
+      .bg-decore__circle--upline {
+        left: -11%;
+      }
+
+      .bg-decore__circle--upwork {
+        right: -31%;
+      }
+    }
+  }
+
 }
 
 @media (max-width: 1500px) {
@@ -2182,6 +2350,20 @@
 
     &__slider {
       width: 800px;
+    }
+  }
+
+  .reviews {
+
+    &__bg-decore {
+
+      .bg-decore__circle--upline {
+        left: -11%;
+      }
+
+      .bg-decore__circle--upwork {
+        right: -33%;
+      }
     }
   }
 
