--- a/src/scss/modules/_typography.scss
+++ b/src/scss/modules/_typography.scss
@@ -161,3 +161,10 @@
   font-weight: 400;
   line-height: 16px;
 }
+
+.rev-text {
+  font-family: 'DM Sans';
+  font-size: 40px;
+  font-weight: 400;
+  line-height: 100%;
+}
