--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2263,7 +2263,7 @@
     @include mix.flex(nowrap, 30px);
     justify-content: space-between;
     align-items: center;
-    padding: 30px 30px;
+    padding: 30px;
     cursor: pointer;
   }
 
@@ -2319,7 +2319,7 @@
   }
 
   &__list {
-    @include mix.flex-col(5px);
+    @include mix.flex-col(8px);
   }
 
   &__li {
@@ -3158,6 +3158,47 @@
     }
   }
 
+  .qa {
+    padding: 45px 0;
+
+    &__column {
+      gap: 25px;
+    }
+  }
+
+  .question {
+    border-radius: 11px;
+
+    &__header {
+      padding: 20px;
+      min-height: 86px;
+    }
+
+    &__indicator {
+      width: 40px;
+      height: 40px;
+    }
+
+    &__title {
+      font-size: 20px;
+      line-height: 23px;
+    }
+
+    &__inner {
+      padding: 20px;
+    }
+
+    &__list {
+      gap: 5px;
+    }
+
+    &__text, &__li {
+      font-size: 15px;
+      line-height: 21px;
+    }
+
+  }
+
 }
 
 @media (max-width: 950px) {
@@ -3915,6 +3956,57 @@
     }
   }
 
+  .qa {
+    gap: 30px;
+
+    &__block-intro {
+
+      .block-intro__title {
+        font-size: 0px;
+
+        &::after {
+          content: 'FAQ';
+          font-size: 80px;
+          letter-spacing: -0.022em;
+        }
+      }
+    }
+
+    &__column {
+      gap: 20px;
+    }
+  }
+
+  .question {
+    border-radius: 8px;
+
+    &__header {
+      padding: 15px;
+      min-height: 70px;
+      transition: all 0.2s;
+      gap: 15px;
+    }
+
+    &__title {
+      font-size: 16px;
+      line-height: 19px;
+    }
+
+    &__inner {
+      padding: 15px;
+    }
+
+    &__list {
+      gap: 4px;
+    }
+
+    &__text, &__li {
+      font-size: 14px;
+      line-height: 19px;
+    }
+
+  }
+
 }
 
 @media (max-width: 660px) {
@@ -4177,6 +4269,19 @@
     &__text {
       font-size: 16px;
       line-height: 20px;
+    }
+  }
+
+  .qa {
+
+    &__content {
+      flex-direction: column;
+      gap: 13px;
+    }
+
+    &__column {
+      gap: 13px;
+      width: 100%;
     }
   }
 
@@ -4791,4 +4896,42 @@
       gap: 4.5px;
     }
   }
+
+  .qa {
+    gap: 40px;
+
+    &__block-intro {
+
+      .block-intro__title {
+        line-height: 0px;
+
+        &::after {
+          font-size: 60px;
+          line-height: 60px;
+        }
+      }
+    }
+  }
+
+  .question {
+
+    &__header {
+      min-height: 72px;
+    }
+
+    &__indicator {
+      border-radius: 4px;
+    }
+
+    &__title {
+      font-size: 18px;
+      line-height: 21px;
+    }
+
+    &__text, &__li {
+      font-size: 15px;
+      line-height: 20px;
+    }
+  }
+  
 }
